--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </header>
 
 <ul>
-  <li>Portfilio</li>
-  <li>About</li>
-  <li>Contact</li>  
+  <li><a href="#">Portfilio</a></li>
+  <li><a href="#">About</a></li>
+  <li><a href="#">Contact</a></li>  
 </ul>
 
 <div class="image">
