--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 </head>
 <body>
   <header>
-<h1>Aldwin Polo</h1>
-  <p>Student</p>
+<h1><a href="#">Aldwin Polo</a></h1>
+  <p><a href="#">Student</a></p>
 </header>
 
 <ul>
-  <li>Portfilio</li>
-  <li>About</li>
-  <li>Contact</li>  
+  <li><a href="#">Portfilio</a></li>
+  <li><a href="#">About</a></li>
+  <li><a href="#">Contact</a></li>  
 </ul>
 
 <div class="image">
