--- a/About.html
+++ b/About.html
@@ -6,8 +6,8 @@
 <!-- *** Below is the About Page Content *** -->
 <header id="about">
   <a href="#portfolio" id="logo">
-    <h1>Justin Scott</h1>
-    <h2>Teacher</h2>
+    <h1>Aldwin Polo</h1>
+    <h2>Student</h2>
   </a>
   <nav>
     <ul>
@@ -21,8 +21,8 @@
   <section>
     <img src="">
     <h3>About</h3>
-    <p>Hi, I'm Justin Scott! This is my design portfolio where I share all of my favroite work. When I'm not designing things, I enjoy riding my dirt bike, playing video games, coding, and more.</p>
-    <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/jrsmotox">@jrsmotox</a>.</p>
+    <p>I'm Aldwin Polo. I enjoy browsing the internet, playing video games, and playing music.</p>
+    <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com">@gilgkhg</a>.</p>
   </section>
   <footer>
     <a href="http://twitter.com">
@@ -31,7 +31,7 @@
     <a href="http://facebook.com">
       <img src="https://webucation.github.io/css-challenge-5/img/facebook-wrap.png" alt="Facebook Logo" class="social-icon">
     </a>
-    <p>&copy; 2017 Justin Scott</p>
+    <p>&copy; 2017 Aldwin Polo</p>
   </footer>
 </div>
 </body>
