--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <body>
 <!-- Index Page Content below -->
 <header id="portfolio">
-  <a href="#portfolio" id="logo">
+  <a href="index.html" id="logo">
     <h1>Aldwin Polo</h1>
     <h2>Student</h2>
   </a>
   <nav>
     <ul>
-      <li><a href="#portfolio" class="selected">Portfolio</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="index.html" class="selected">Portfolio</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
