--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <body>
   <!-- *** Below is the Contact Page *** -->
 <header id="contact">
-  <a href="#portfolio" id="logo">
+  <a href="index.html" id="logo">
     <h1>Justin Scott</h1>
     <h2>Teacher</h2>
   </a>
